(library
 (name test_map_model)
 (modules test_map_model)
 (libraries ounit2 models utils))

(library
 (name test_item_model)
 (modules test_item_model)
 (libraries ounit2 models utils))

(library
 (name test_entity_model)
 (modules test_entity_model)
 (libraries ounit2 models utils))

(library
 (name test_trap_ground)
 (modules test_trap_ground)
 (libraries ounit2 models utils))

(library
 (name test_bag_model)
 (modules test_bag_model)
 (libraries ounit2 models utils))

(library
 (name test_a_star)
 (modules test_a_star)
 (libraries ounit2 models utils))

(library
 (name test_shadowcaster)
 (modules test_shadowcaster)
 (libraries ounit2 models utils))

(library
 (name test_automate)
 (modules test_automate)
 (libraries ounit2 models utils))

(library
 (name test_prim)
 (modules test_prim)
 (libraries ounit2 models utils))
